@@ -1,3 +1,8 @@
+2004-12-03  Richard Henderson  <rth@redhat.com>
+
+	* config/cpu/i486/atomicity.h (__exchange_and_add, __atomic_add):
+	Split in-out memory constraints.
+
 2004-09-30  Release Manager
 
 	* GCC 3.3.5 Released.
